# camila-utils

./: .gitignore  CMakeLists.txt  README.md
include/camila/: CCMenuColor.hpp  Copy.hpp  Dialog.hpp  ObjectData.hpp  ScrollableListView.hpp  Selector.hpp  Setting.hpp  SignalWrappers.hpp  Slider.hpp  TetherObject.hpp  reactive.hpp  utils.hpp
test/: CMakeLists.txt  mod.json
test/src/: main.cpp
